Fix cards and spacing

--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -10,3 +10,8 @@
 .line-height {
   line-height: 40px;
 }
+
+.card {
+  display: block;
+  position: relative;
+}
