--- a/_patterns/navigation/navigation.css
+++ b/_patterns/navigation/navigation.css
@@ -1,5 +1,5 @@
 .nav-list {
-  letter-spacing: .3rem;
+  letter-spacing: .1rem;
 }
 
 .nav-list:hover {
@@ -10,4 +10,36 @@
 .title {
   font-weight: bold;
   color: var(--color-secondary);
+}
+
+@media only screen and (min-width: 25em) {
+
+  .title {
+    text-align: center;
+  }
+
+}
+
+@media only screen and (min-width: 38em) {
+
+  .title {
+    text-align: center;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  .title {
+    text-align: left;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  .title {
+    text-align: left;
+  }
+
 }
